--- a/Draw/Controller/Feed/FeedDetailController~ipad.xib
+++ b/Draw/Controller/Feed/FeedDetailController~ipad.xib
@@ -15,6 +15,7 @@
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBProxyObject</string>
+			<string>IBUIActivityIndicatorView</string>
 			<string>IBUITextView</string>
 			<string>IBUITableView</string>
 			<string>IBUIButton</string>
@@ -44,7 +45,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="555051130"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -58,7 +58,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrameSize">{768, 916}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="163844663"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -72,7 +71,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{152, 64}, {465, 87}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="866958469"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -86,7 +84,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrameSize">{768, 108}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="27418821"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -100,7 +97,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{17, 12}, {74, 74}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="146667255"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -137,7 +133,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{120, 0}, {528, 108}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="618456716"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -173,7 +168,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{24, 445}, {720, 1}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="527899610"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="771537453">
 							<int key="NSColorSpace">3</int>
@@ -186,7 +180,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{24, 445}, {720, 425}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="200727363"/>
 						<reference key="IBUIBackgroundColor" ref="75250085"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -205,7 +198,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{48, 449}, {672, 130}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="845434084"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="870777980">
 							<int key="NSColorSpace">3</int>
@@ -243,7 +235,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{660, 10}, {84, 76}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="400890904"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -253,7 +244,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{518, 331}, {230, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="807744600"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -283,7 +273,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{30, 393}, {707, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="218208994"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -311,7 +300,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{518, 257}, {180, 56}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="444596871"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -353,7 +341,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrameSize">{768, 91}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1067315516"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -364,8 +351,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{578, 3}, {175, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -394,7 +379,6 @@
 								<int key="NSvFlags">301</int>
 								<string key="NSFrame">{{14, 3}, {552, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="176616936"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -404,7 +388,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{14, 4}, {552, 71}}</string>
 								<reference key="NSSuperview" ref="845434084"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1020020007"/>
 								<reference key="IBUIBackgroundColor" ref="870777980"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -424,7 +407,6 @@
 						</array>
 						<string key="NSFrame">{{0, 913}, {768, 89}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1029985620"/>
 						<reference key="IBUIBackgroundColor" ref="870777980"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -434,7 +416,6 @@
 						<int key="NSvFlags">-2147483329</int>
 						<string key="NSFrame">{{48, 268}, {100, 45}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="486281110"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -457,7 +438,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{275, 151}, {219, 230}}</string>
 						<reference key="NSSuperview" ref="141827972"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="554680063"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -466,10 +446,20 @@
 							<string key="NSResourceName">unloadbg.png</string>
 						</object>
 					</object>
+					<object class="IBUIActivityIndicatorView" id="705547365">
+						<reference key="NSNextResponder" ref="141827972"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{366, 247}, {37, 37}}</string>
+						<reference key="NSSuperview" ref="141827972"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIAnimating">YES</bool>
+						<int key="IBUIStyle">0</int>
+						<reference key="IBUIColor" ref="857487715"/>
+					</object>
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="819923111"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -594,6 +584,14 @@
 					<int key="connectionID">174</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">loaddingActivity</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="705547365"/>
+					</object>
+					<int key="connectionID">176</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickActionButton:</string>
 						<reference key="source" ref="554680063"/>
@@ -684,6 +682,7 @@
 							<reference ref="218208994"/>
 							<reference ref="400890904"/>
 							<reference ref="486281110"/>
+							<reference ref="705547365"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -793,6 +792,11 @@
 						<reference key="object" ref="486281110"/>
 						<reference key="parent" ref="141827972"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">175</int>
+						<reference key="object" ref="705547365"/>
+						<reference key="parent" ref="141827972"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -822,140 +826,15 @@
 				<string key="148.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="171.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="173.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="175.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">174</int>
+			<int key="maxID">176</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">FeedDetailController</string>
-					<string key="superclassName">PPTableViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickActionButton:">id</string>
-						<string key="clickBackButton:">id</string>
-						<string key="clickSendButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickActionButton:">
-							<string key="name">clickActionButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickBackButton:">
-							<string key="name">clickBackButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickSendButton:">
-							<string key="name">clickSendButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="actionButton">UIButton</string>
-						<string key="commentInput">UITextView</string>
-						<string key="commentLabel">UILabel</string>
-						<string key="feedImage">UIImageView</string>
-						<string key="guessStatLabel">UILabel</string>
-						<string key="inputBackground">UIImageView</string>
-						<string key="inputBackgroundView">UIView</string>
-						<string key="nickNameLabel">UILabel</string>
-						<string key="noCommentTipsLabel">UILabel</string>
-						<string key="paperImage">UIImageView</string>
-						<string key="sendButton">UIButton</string>
-						<string key="timeLabel">UILabel</string>
-						<string key="titleLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="actionButton">
-							<string key="name">actionButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="commentInput">
-							<string key="name">commentInput</string>
-							<string key="candidateClassName">UITextView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="commentLabel">
-							<string key="name">commentLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="feedImage">
-							<string key="name">feedImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="guessStatLabel">
-							<string key="name">guessStatLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackground">
-							<string key="name">inputBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="inputBackgroundView">
-							<string key="name">inputBackgroundView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nickNameLabel">
-							<string key="name">nickNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="noCommentTipsLabel">
-							<string key="name">noCommentTipsLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="paperImage">
-							<string key="name">paperImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sendButton">
-							<string key="name">sendButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="timeLabel">
-							<string key="name">timeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FeedDetailController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewController</string>
-					<string key="superclassName">PPViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">dataTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">dataTableView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">dataTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
