--- a/Draw/Dice/View/DiceSettingView/DiceSettingView.xib
+++ b/Draw/Dice/View/DiceSettingView/DiceSettingView.xib
@@ -41,6 +41,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="937784318"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="889012136"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="775592760">
 							<int key="NSColorSpace">3</int>
@@ -58,6 +60,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 12}, {234, 137}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566736714"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="713976561">
@@ -72,6 +75,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{91, 39}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="864811469"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -112,6 +116,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{91, 93}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="720099629"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -133,7 +138,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 89}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSNextKeyView" ref="943783445"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="450398201"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -148,7 +154,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 35}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSNextKeyView" ref="450398201"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="943783445"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -163,6 +170,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{147, 93}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -189,7 +198,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{147, 39}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSNextKeyView" ref="290649107"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="312623812"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -210,7 +220,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{220, 0}, {27, 27}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSNextKeyView" ref="312623812"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="290649107"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -219,10 +230,7 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUINormalTitle">X</string>
 								<reference key="IBUIHighlightedTitleColor" ref="566338797"/>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-								</object>
+								<reference key="IBUINormalTitleColor" ref="775592760"/>
 								<reference key="IBUINormalTitleShadowColor" ref="519780770"/>
 								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 									<string key="NSClassName">NSImage</string>
@@ -234,6 +242,8 @@
 						</array>
 						<string key="NSFrame">{{37, 132}, {247, 157}}</string>
 						<reference key="NSSuperview" ref="937784318"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="556222993"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="713976561"/>
 						<float key="IBUIAlpha">0.80000001192092896</float>
@@ -242,7 +252,8 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="556222993"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="985781082"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="713976561"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -477,7 +488,76 @@
 			<nil key="sourceID"/>
 			<int key="maxID">30</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DiceSettingView</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="audioImageView">UIImageView</string>
+						<string key="audioOffButton">UIButton</string>
+						<string key="audioOnButton">UIButton</string>
+						<string key="bgImageView">UIImageView</string>
+						<string key="musicImageView">UIImageView</string>
+						<string key="musicOffButton">UIButton</string>
+						<string key="musicOnButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="audioImageView">
+							<string key="name">audioImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="audioOffButton">
+							<string key="name">audioOffButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="audioOnButton">
+							<string key="name">audioOnButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="bgImageView">
+							<string key="name">bgImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="musicImageView">
+							<string key="name">musicImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="musicOffButton">
+							<string key="name">musicOffButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="musicOnButton">
+							<string key="name">musicOnButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/DiceSettingView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
